; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_cmd.c_carlu_cmd_buf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_cmd.c_carlu_cmd_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carl9170_cmd = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.carlu = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.carl9170_cmd* @carlu_cmd_buf(%struct.carlu* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.carl9170_cmd*, align 8
  %5 = alloca %struct.carlu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.carl9170_cmd*, align 8
  store %struct.carlu* %0, %struct.carlu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = urem i32 %9, 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* %7, align 4
  %14 = zext i32 %13 to i64
  %15 = add i64 4, %14
  %16 = icmp ugt i64 %15, 64
  br i1 %16, label %17, label %21

17:                                               ; preds = %12, %3
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  %20 = call %struct.carl9170_cmd* @ERR_PTR(i32 %19)
  store %struct.carl9170_cmd* %20, %struct.carl9170_cmd** %4, align 8
  br label %40

21:                                               ; preds = %12
  %22 = load i32, i32* %7, align 4
  %23 = zext i32 %22 to i64
  %24 = add i64 4, %23
  %25 = trunc i64 %24 to i32
  %26 = call %struct.carl9170_cmd* @malloc(i32 %25)
  store %struct.carl9170_cmd* %26, %struct.carl9170_cmd** %8, align 8
  %27 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %8, align 8
  %28 = icmp ne %struct.carl9170_cmd* %27, null
  br i1 %28, label %29, label %38

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  %31 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %8, align 8
  %32 = getelementptr inbounds %struct.carl9170_cmd, %struct.carl9170_cmd* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %30, i32* %33, align 4
  %34 = load i32, i32* %7, align 4
  %35 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %8, align 8
  %36 = getelementptr inbounds %struct.carl9170_cmd, %struct.carl9170_cmd* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 1
  store i32 %34, i32* %37, align 4
  br label %38

38:                                               ; preds = %29, %21
  %39 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %8, align 8
  store %struct.carl9170_cmd* %39, %struct.carl9170_cmd** %4, align 8
  br label %40

40:                                               ; preds = %38, %17
  %41 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %4, align 8
  ret %struct.carl9170_cmd* %41
}

declare dso_local %struct.carl9170_cmd* @ERR_PTR(i32) #1

declare dso_local %struct.carl9170_cmd* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
